Added DTM0660 8000 count variant, and 8000 count (mode 10)

--- a/src/uidmmprefs.ui
+++ b/src/uidmmprefs.ui
@@ -233,6 +233,11 @@
                             <string>40000</string>
                         </property>
                     </item>
+                    <item>
+                        <property name="text">
+                            <string>80000</string>
+                        </property>
+                    </item>
                     <property name="name">
                         <cstring>displayCombo</cstring>
                     </property>
